--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body {
 
 .game-container {
     position: relative;
-    width: 600px;
+    width: 100%;
+    max-width: 600px;
     height: 200px;
     border: 2px solid #000;
     overflow: hidden;
@@ -34,9 +35,9 @@ body {
 .dino {
     position: absolute;
     bottom: 0;
-    width: 70px;
-    height: 70px;
-    background-image: url('turtle.png'); /* Replace with your dino image URL */
+    width: 40px;
+    height: 40px;
+    background-image: url('dino.png'); /* Replace with your dino image URL */
     background-size: cover;
 }
 
@@ -66,3 +67,4 @@ body {
         right: 600px;
     }
 }
+
