--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     bottom: 0;
     width: 40px;
     height: 40px;
-    background-image: url('dino.png'); /* Replace with your dino image URL */
+    background-image: url('turtle.png'); /* Replace with your turtle image URL */
     background-size: cover;
 }
 
